@@ -7,17 +7,24 @@ import net.fabricmc.fabric.api.networking.v1.PlayerLookup;
 import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.entity.Entity;
+import net.minecraft.network.PacketByteBuf;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.sound.SoundEvent;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.util.registry.Registry;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
 public class SoundHelper {
     private static Random rng = new Random();
+
+    private static float rand(float min, float max){
+        return min + rng.nextFloat() * (max - min);
+    }
 
     public static void playSound(ServerWorld world, Entity entity, WeaponAttributes.Sound sound) {
         if (sound == null) {
@@ -26,9 +33,9 @@ public class SoundHelper {
         
         try {
             float pitch = (sound.randomness() > 0)
-                    ?  rng.nextFloat(sound.pitch() - sound.randomness(), sound.pitch() + sound.randomness())
+                    ? rand(sound.pitch() - sound.randomness(), sound.pitch() + sound.randomness())
                     : sound.pitch();
-            var packet = new Packets.AttackSound(
+            PacketByteBuf packet = new Packets.AttackSound(
                     entity.getX(),
                     entity.getY(),
                     entity.getZ(),
@@ -38,11 +45,11 @@ public class SoundHelper {
                     rng.nextLong())
                     .write();
 
-            var soundEvent = Registry.SOUND_EVENT.get(new Identifier(sound.id()));
-            var distance = sound.volume() > 1.0f ? (double)(16.0f * sound.volume()) : 16.0;
-            var origin = new Vec3d(entity.getX(), entity.getY(), entity.getZ());
+            SoundEvent soundEvent = Registry.SOUND_EVENT.get(new Identifier(sound.id()));
+            double distance = sound.volume() > 1.0f ? (double)(16.0f * sound.volume()) : 16.0;
+            Vec3d origin = new Vec3d(entity.getX(), entity.getY(), entity.getZ());
             PlayerLookup.around(world, origin, distance).forEach(serverPlayer -> {
-                var channel = Packets.AttackSound.ID;
+                Identifier channel = Packets.AttackSound.ID;
                 try {
                     if (ServerPlayNetworking.canSend(serverPlayer, channel)) {
                         ServerPlayNetworking.send(serverPlayer, channel, packet);
@@ -57,7 +64,7 @@ public class SoundHelper {
         }
     }
 
-    public static List<String> soundKeys = List.of(
+    public static List<String> soundKeys = Arrays.asList(
             "anchor_slam",
             "axe_slash",
             "claymore_swing",
@@ -87,9 +94,9 @@ public class SoundHelper {
     );
 
     public static void registerSounds() {
-        for (var soundKey: soundKeys) {
-            var soundId = new Identifier(BetterCombat.MODID, soundKey);
-            var soundEvent = new SoundEvent(soundId);
+        for (String soundKey: soundKeys) {
+            Identifier soundId = new Identifier(BetterCombat.MODID, soundKey);
+            SoundEvent soundEvent = new SoundEvent(soundId);
             Registry.register(Registry.SOUND_EVENT, soundId, soundEvent);
         }
     }
